<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#d3d3d3">

    <include layout="@layout/lock_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="46dp"
        android:layout_marginStart="46dp"
        android:layout_marginRight="46dp"
        android:layout_marginEnd="46dp"
        android:layout_marginTop="40dp">

        <EditText
            android:id="@+id/ET_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#D3D3D3"
            android:padding="10dp"
            android:textSize="20sp"
            android:inputType="numberPassword"
            android:background="@drawable/edittext_background"
            android:textCursorDrawable="@drawable/edittext_cursor_color"
            android:gravity="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/rounded_button"
                android:text="@string/_1"
                android:textColor="#fff"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/rounded_button"
                android:text="@string/_2"
                android:textColor="#fff"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/rounded_button"
                android:text="@string/_3"
                android:textColor="#fff"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/rounded_button"
                android:text="@string/_4"
                android:textColor="#fff"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/rounded_button"
                android:text="@string/_5"
                android:textColor="#fff"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/rounded_button"
                android:text="@string/_6"
                android:textColor="#fff"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/rounded_button"
                android:text="@string/_7"
                android:textColor="#fff"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/rounded_button"
                android:text="@string/_8"
                android:textColor="#fff"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/rounded_button"
                android:text="@string/_9"
                android:textColor="#fff"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

        <Button
            android:id="@+id/btn_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/rounded_button"
            android:text="@string/_0"
            android:layout_centerInParent="true"
            android:textColor="#fff"
            tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_toEndOf="@+id/btn_0"
                android:layout_toRightOf="@+id/btn_0"
                android:background="@drawable/rounded_button"
                android:textColor="#fff"
                tools:ignore="ButtonStyle"
                android:text="@string/del"
                android:contentDescription="@string/delete"/>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>